# StringCompareAlgorithmTesting

./: CMakeLists.txt  README.md  Timer.cpp  Timer.h  data.txt  main.cpp
BoasAlgorithm/: BoasAlgorithm.cpp  BoasAlgorithm.h
DataLoader/: DataLoader.cpp  DataLoader.h
IterativeAlgorithm/: IterativeAlgorithm.h  IterativeCompare.cpp
StringComparisonAlgorithmBase/: StringComparisonAlgorithmBase.cpp  StringComparisonAlgorithmBase.h
